--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="https://sfinford.github.io/Element-Generator/">⚛️ElementGen</a>
       </div>
       <div class="box">
-        <a>Coming Soon!</a>
+        <a href="https://sfinford.github.io/Viviro-PasswordGen/">🔑PasswordGen</a>
       </div>
       <div class="box">
         <a>Coming Soon!</a>
