--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
         <a href="https://sfinford.github.io/Viviro-PasswordGen/">🔑PasswordGen</a>
       </div>
       <div class="box">
+        <a href="https://sfinford.github.io/Viviro-Stopwatch/">⏱️Stopwatch</a>
+      </div>
+      <div class="box">
+        <a>Coming Soon!</a>
+      </div>
+      <div class="box">
+        <a>Coming Soon!</a>
+      </div>
+      <div class="box">
+        <a>Coming Soon!</a>
+      </div>
+      <div class="box">
+        <a>Coming Soon!</a>
+      </div>
+      <div class="box">
         <a>Coming Soon!</a>
       </div>
     <script src="script.js"></script>
