--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="https://sfinford.github.io/Viviro-Stopwatch/">⏱️Stopwatch</a>
       </div>
       <div class="box">
-        <a>Coming Soon!</a>
+        <a href="https://sfinford.github.io/Viviro-WordCounter/">🔤WordCounter</a>
       </div>
       <div class="box">
         <a>Coming Soon!</a>
