--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="https://sfinford.github.io/Viviro-WordCounter/">🔤WordCounter</a>
       </div>
       <div class="box">
-        <a>Coming Soon!</a>
+        <a href="https://sfinford.github.io/Viviro-NumberGen/">🔢NumberGen</a>
       </div>
       <div class="box">
         <a>Coming Soon!</a>
