--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h1>Viviro Dashboard</h1>
     <div class="container">
       <div class="box">
+        <a href="https://sfinford.github.io/Albert/">🙂Albert AI</a>
+      </div>
+      <div class="box">
         <a href="https://sfinford.github.io/Viviro-To-Do/">✔️To-Do</a>
       </div>
       <div class="box">
@@ -28,9 +31,6 @@
       </div>
       <div class="box">
         <a href="https://sfinford.github.io/Viviro-NumberGen/">🔢NumberGen</a>
-      </div>
-      <div class="box">
-        <a>Coming Soon!</a>
       </div>
       <div class="box">
         <a>Coming Soon!</a>
